# QuADMesh-MATLAB

./: .domi-pin  .gitattributes  .gitignore  AI-USAGE.md  CHILmesh.m  CLAUDE.md  LICENSE  MANIFEST.in  Main.m  README.md  Tri2QuadRoutine.m  createQuadDomain.m  edgeBisection.m  edgeInsertion.m  identifyEdgesFunction.m  mergeTrianglesFunction.m  pyproject.toml  triangleRemovalFunction.m
.claude/: settings.json
.github/: labels.yml  publish.yml
.github/ISSUE_TEMPLATE/: attention-request.md  bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  set-secret.sh  sync-labels.yml  tests.yml
.specify/memory/: constitution.md
00_CHILMesh_Class/@CHILmesh/: CHILmesh.m
01_ADMESH_Library/01_ADMESH_Routine/: ADmeshRoutine.m  ADmeshSubMeshRoutine.m
01_ADMESH_Library/02_Create_Background_Grid/: CreateBackgroundGrid.m
03_CHILMesh_Test_Cases/: rectangular_mesh_triangle2 (2).mat
archive/: README.md
docs/: MAPPING.md  algorithm_writeup.md  parallelization-strategy-memo.md  python-quickstart.md  speckit-quadmesh-plus-layers-wnat-audit.md
matlab/: README.md
python/: MAPPING.md  README.md  pyproject.toml
scripts/: dev_setup.sh  instructions_on_start.sh
tests/: conftest.py  test_cli.py  test_domains.py  test_faithful_invariants.py  test_faithful_pairing.py  test_flagged_edges.py  test_layer_state.py  test_mesh_structure.py  test_no_interior_tris.py  test_quality.py  test_recombination_ops.py  test_repair.py  test_smoother.py  test_tri2quad_smoke.py  test_tri_removal.py  test_tri_removal_faithful.py
visualization/: README.md  manim_tri2quad.py
(+265 files in other folders)
